# ansible-role-unattended-upgrades

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ansible-lint.yml
defaults/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  requirements.yml
tasks/: main.yml
templates/: 50unattended-upgrades.j2
vars/: main.yml
